--- a/local.build.props
+++ b/local.build.props
@@ -10,7 +10,7 @@
         <AutomateLocalDeployment>true</AutomateLocalDeployment>
 
         <!-- Used when building both Il2Cpp and Mono. Typically located at `steamapps/Schedule I/MelonLoader/net6` -->
-        <MelonLoaderAssembliesPath>..\Assemblies\MelonLoader</MelonLoaderAssembliesPath>
+        <MelonLoaderAssembliesPath>..\..\Assemblies\MelonLoader</MelonLoaderAssembliesPath>
 
 <!-- Mono Configuration -->
 
@@ -18,7 +18,7 @@
         <LocalMonoDeploymentPath>..\..\..\..\Schedule I</LocalMonoDeploymentPath>
 
         <!-- Used only when building against Mono. Typically located at `steamapps/Schedule I/Schedule I_Data/Managed` -->
-        <MonoAssembliesPath>..\Assemblies\Mono</MonoAssembliesPath>
+        <MonoAssembliesPath>..\..\Assemblies\Mono</MonoAssembliesPath>
 
 <!-- Il2Cpp Configuration -->
 
@@ -26,6 +26,6 @@
         <LocalIl2CppDeploymentPath>..\..\..\..\Schedule I</LocalIl2CppDeploymentPath>
 
         <!-- Used only when building against Il2Cpp. Typically located at `steamapps/Schedule I/MelonLoader/Il2CppAssemblies` -->
-        <Il2CppAssembliesPath>..\Assemblies\Il2Cpp</Il2CppAssembliesPath>
+        <Il2CppAssembliesPath>..\..\Assemblies\Il2Cpp</Il2CppAssembliesPath>
     </PropertyGroup>
 </Project>
