--- a/Silkroad-S1API/Silkroad-S1API.csproj
+++ b/Silkroad-S1API/Silkroad-S1API.csproj
@@ -22,6 +22,12 @@
         <Reference Include="Il2CppInterop.Runtime">
             <HintPath>$(MelonLoaderAssembliesPath)\Il2CppInterop.Runtime.dll</HintPath>
         </Reference>
+		<Reference Include="UnityEngine">
+			<HintPath>$(Il2CppAssembliesPath)\UnityEngine.dll</HintPath>
+		</Reference>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>$(Il2CppAssembliesPath)\UnityEngine.CoreModule.dll</HintPath>
+		</Reference>
         <Reference Include="Il2CppInterop.Common">
             <HintPath>$(MelonLoaderAssembliesPath)\Il2CppInterop.Common.dll</HintPath>
         </Reference>
@@ -39,12 +45,6 @@
         </Reference>
         <Reference Include="Il2Cppmscorlib">
             <HintPath>$(Il2CppAssembliesPath)\Il2Cppmscorlib.dll</HintPath>
-        </Reference>
-        <Reference Include="UnityEngine">
-            <HintPath>$(Il2CppAssembliesPath)\UnityEngine.dll</HintPath>
-        </Reference>
-        <Reference Include="UnityEngine.CoreModule">
-            <HintPath>$(Il2CppAssembliesPath)\UnityEngine.CoreModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.UI">
             <HintPath>$(Il2CppAssembliesPath)\UnityEngine.UI.dll</HintPath>
@@ -99,6 +99,9 @@
         <!-- <PackageReference Include="S1API" Version="1.2.4" />-->
        <Reference Include="0Harmony">
            <HintPath>$(MelonLoaderAssembliesPath)\0Harmony.dll</HintPath>
+       </Reference>
+       <Reference Include="UnityEngine.InputModule">
+         <HintPath>..\..\Assemblies\Il2Cpp\UnityEngine.InputModule.dll</HintPath>
        </Reference>
        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
        <PackageReference Include="LavaGang.MelonLoader" Version="0.7.0" />
