--- a/Empire-S1API/Empire-S1API.csproj
+++ b/Empire-S1API/Empire-S1API.csproj
@@ -5,7 +5,7 @@
 
     <!-- General properties -->
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Authors>Team FunMods</Authors>
         <PackageId>Empire</PackageId>
         <Description>A Schedule One Mono / Il2Cpp Cross Compatibility Mod Framework</Description>
@@ -103,20 +103,23 @@
        <Reference Include="UnityEngine.InputModule">
          <HintPath>..\..\Assemblies\Il2Cpp\UnityEngine.InputModule.dll</HintPath>
        </Reference>
+		<Reference Include="S1API">
+			<HintPath>..\..\Assemblies\S1API.dll</HintPath>
+		</Reference>
        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
        <PackageReference Include="LavaGang.MelonLoader" Version="0.7.0" />
-       <PackageReference Include="S1API" Version="1.5.0" />
+       
 
 
     </ItemGroup>
 
     <!-- Automated local deployment -->
     <Target Name="PostBuildIl2Cpp" AfterTargets="Build" Condition=" '$(AutomateLocalDeployment)' == 'true' and '$(Configuration)' == 'Il2Cpp' ">
-        <Copy SourceFiles=".\bin\Il2Cpp\netstandard2.1\Empire-S1API.dll" DestinationFiles="$(LocalIl2CppDeploymentPath)\Mods\Empire.dll" />
-        <Copy SourceFiles=".\bin\Il2Cpp\netstandard2.1\Empire-S1API.dll" DestinationFiles="$(LocalMonoDeploymentPath)\Mods\Empire.dll" />
+        <Copy SourceFiles=".\bin\Il2Cpp\net6.0\Empire-S1API.dll" DestinationFiles="$(LocalIl2CppDeploymentPath)\Mods\Empire.dll" />
+        <Copy SourceFiles=".\bin\Il2Cpp\net6.0\Empire-S1API.dll" DestinationFiles="$(LocalMonoDeploymentPath)\Mods\Empire.dll" />
 		<Copy SourceFiles=".\References\empire.json" DestinationFiles="$(LocalIl2CppDeploymentPath)\Mods\Empire\empire.json" />
 		<Copy SourceFiles=".\References\empire.json" DestinationFiles="$(LocalMonoDeploymentPath)\Mods\Empire\empire.json" />
-		<Copy SourceFiles=".\bin\Il2Cpp\netstandard2.1\Empire-S1API.dll" DestinationFiles="..\Mods\Empire.dll" />
+		<Copy SourceFiles=".\bin\Il2Cpp\net6.0\Empire-S1API.dll" DestinationFiles="..\Mods\Empire.dll" />
 		<Copy SourceFiles=".\References\empire.json" DestinationFiles="..\Mods\Empire\empire.json" />
     </Target>
 </Project>
