working with latest version

--- a/Empire-S1API/Empire-S1API.csproj
+++ b/Empire-S1API/Empire-S1API.csproj
@@ -16,7 +16,14 @@
         <Platforms>AnyCPU</Platforms>
         <RootNamespace>Empire</RootNamespace>
     </PropertyGroup>
-
+	
+	<PropertyGroup Condition="'$(Configuration)' == 'Il2Cpp'">
+		<DefineConstants>Il2Cpp</DefineConstants>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)' == 'Mono'">
+		<DefineConstants>Mono</DefineConstants>
+	</PropertyGroup>
+	
     <!-- IL2CPP Specific Deps -->
     <ItemGroup Condition="'$(Configuration)' == 'Il2Cpp'">
         <Reference Include="Il2CppInterop.Runtime">
